Подписка на других пользователей доработка